# Runtime_prediction

./: README.md
analyzer/habitat/analysis/mlp/: devices.csv
cpp/: CMakeLists.txt
docker/: Dockerfile
experiments/: dcgan+128-GTX1080Ti-GTX1080Ti-breakdown.csv  dcgan+128-GTX1080Ti-P100-breakdown.csv  dcgan+128-GTX1080Ti-P4000-breakdown.csv  dcgan+128-GTX1080Ti-RTX2070-breakdown.csv  dcgan+128-GTX1080Ti-RTX2080Ti-breakdown.csv  dcgan+128-GTX1080Ti-T4-breakdown.csv  dcgan+128-GTX1080Ti-V100-breakdown.csv  dcgan+128-GTX1080Ti-e2e.csv  dcgan+64-GTX1080Ti-GTX1080Ti-breakdown.csv  dcgan+64-GTX1080Ti-P100-breakdown.csv  dcgan+64-GTX1080Ti-P4000-breakdown.csv  dcgan+64-GTX1080Ti-RTX2070-breakdown.csv  dcgan+64-GTX1080Ti-RTX2080Ti-breakdown.csv  dcgan+64-GTX1080Ti-T4-breakdown.csv  dcgan+64-GTX1080Ti-V100-breakdown.csv  dcgan+64-GTX1080Ti-e2e.csv  dcgan+96-GTX1080Ti-GTX1080Ti-breakdown.csv  dcgan+96-GTX1080Ti-P100-breakdown.csv  dcgan+96-GTX1080Ti-P4000-breakdown.csv  dcgan+96-GTX1080Ti-RTX2070-breakdown.csv  dcgan+96-GTX1080Ti-RTX2080Ti-breakdown.csv  dcgan+96-GTX1080Ti-T4-breakdown.csv  dcgan+96-GTX1080Ti-V100-breakdown.csv  dcgan+96-GTX1080Ti-e2e.csv  inception+16-GTX1080Ti-GTX1080Ti-breakdown.csv  inception+16-GTX1080Ti-P100-breakdown.csv  inception+16-GTX1080Ti-P4000-breakdown.csv  inception+16-GTX1080Ti-RTX2070-breakdown.csv  inception+16-GTX1080Ti-RTX2080Ti-breakdown.csv  inception+16-GTX1080Ti-T4-breakdown.csv  inception+16-GTX1080Ti-V100-breakdown.csv  inception+16-GTX1080Ti-e2e.csv  inception+32-GTX1080Ti-GTX1080Ti-breakdown.csv  inception+32-GTX1080Ti-P100-breakdown.csv  inception+32-GTX1080Ti-P4000-breakdown.csv  inception+32-GTX1080Ti-RTX2070-breakdown.csv  inception+32-GTX1080Ti-RTX2080Ti-breakdown.csv  inception+32-GTX1080Ti-T4-breakdown.csv  inception+32-GTX1080Ti-V100-breakdown.csv  inception+32-GTX1080Ti-e2e.csv  (+34 more)
tools/recording/: to_dataset.py
